--- a/code/CosmosFeedTestsSolution/CosmosFeedTestsConsole/CosmosFeedTestsConsole.csproj
+++ b/code/CosmosFeedTestsSolution/CosmosFeedTestsConsole/CosmosFeedTestsConsole.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.25.0" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\first.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
